hot fixing, ( forgot the same class name for 2 diffrent sections, so the style collapsed)

--- a/src/Style/Views/ChangePassword.scss
+++ b/src/Style/Views/ChangePassword.scss
@@ -1,7 +1,7 @@
 @import "../variable.scss";
 @import "../breakpoints.scss";
 
-.reset-password {
+.change-password {
   height: 100vh;
   width: 100vw;
   background-color: $background;
